--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Ranker</title>
+
+     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
   </head>
   <body>
     <!-- This html file will be processed as an ejs template by Webpack -->
